--- a/landingpage/public/index.html
+++ b/landingpage/public/index.html
@@ -21,7 +21,7 @@
 
 
 
-  <script src="./node_modules/preline/dist/preline.js"></script>
+  <!-- <script src="./node_modules/preline/dist/preline.js"></script> -->
 
 </body>
 
